--- a/index.html
+++ b/index.html
@@ -2,58 +2,175 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
   <title>Frontend Mentor | Loopstudios landing page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <!--Alata-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
+
+  <!--Josefin Sans-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
+  
+  <link rel="stylesheet" href="assets/css/index.css">
+  <link rel="stylesheet" href="assets/css/table.css" media="screen and (max-width: 1024px)">
 </head>
+
 <body>
-  About
-  Careers
-  Events
-  Products
-  Support
+  <header>
+    <nav class="menu">
+      <div class="menu-logo logo">
+        <img src="assets/images/logo.svg" alt="" class="logo">
+      </div>
+      <div class="navbar">
+        <div class="query-navbar">
+          <a href="#">
+            <img src="assets/images/logo.svg" alt="">
+          </a>
+          <div class="close-icon" id="btn-close" >
+            <img src="assets/images/icon-close.svg" alt="close botton">
+          </div>
+        </div>
+        <ul class="nav-list">
+          <li><a href="#" class="nav-link">About</a></li>
+          <li><a href="#" class="nav-link">Careers</a></li>
+          <li><a href="#" class="nav-link">Events</a></li>
+          <li><a href="#" class="nav-link">Products</a></li>
+          <li><a href="#" class="nav-link">Support</a></li>
+        </ul>    
+      </div>
+    </nav>
+    <div class="hamburger" id="icon">
+      <img src="assets/images/icon-hamburger.svg" alt="icon">
+    </div>
+    <section class="text-box">
+      <h1>Immersive experiences that deliver</h1>
+    </section>
+  </header>
+  
+  <main>
+    <section class="vr-container">
+      <div class="picture-container-vr">
+        <img src="assets/images/desktop/image-interactive.jpg" alt="">
+      </div>
+      <div class="container-text">
+        <h2>The leader in interactive VR</h2>
+        <p>Founded in 2011, Loopstudios has been producing world-class virtual reality 
+          projects for some of the best companies around the globe. Our award-winning 
+          creations have transformed businesses through digital experiences that bind 
+          to their brand.</p>
+      </div>
+    </section>
 
-  Immersive experiences that deliver
+    <section class="Our-inf" id="Our-inf">
+      <h2>Our creations</h2>
+     
+      <section class="grid-section-container">
+        <div class="product-card">
+          <picture>
+            <source media="(max-width: 576px)" srcset="assets/images/mobile/image-deep-earth.jpg">
+            <source media="(min-width: 577px)" srcset="assets/images/desktop/image-deep-earth.jpg">
+            <img src="assets/images/desktop/image-deep-earth.jpg" alt="deep-earth">
+            <p>Deep <br> Earth</p>
+          </picture>
+        </div>
+        <div class="product-card">
+          <picture>
+            <source media="(min-width: 576px)" srcset="assets/images/desktop/image-night-arcade.jpg">
+            <source media="(max-width: 575px)" srcset="assets/images/mobile/image-night-arcade.jpg">
+            <img src="assets/images/desktop/image-night-arcade.jpg" alt="night-arcade">
+          </picture>
+          <p>Night <br> Arcade</p>
+        </div>
+        <div class="product-card">
+          <picture>
+            <source media="(min-width: 576px)" srcset="assets/images/desktop/image-soccer-team.jpg">
+            <source media="(max-width: 575px)" srcset="assets/images/mobile/image-soccer-team.jpg">
+            <img src="assets/images/desktop/image-soccer-team.jpg" alt="deep-earth">
+          </picture>
+          <p>Soccer <br> Team vr</p>
+        </div>
+        <div class="product-card">
+          <picture>
+            <source media="(min-width: 576px)" srcset="assets/images/desktop/image-grid.jpg">
+            <source media="(max-width: 575px)" srcset="assets/images/mobile/image-grid.jpg">
+            <img src="assets/images/desktop/image-grid.jpg" alt="deep-earth">
+          </picture>
+          <p>The <br> Grid</p>
+        </div>
+        <div class="product-card">
+          <picture>
+            <source media="(min-width: 577px)" srcset="assets/images/desktop/image-from-above.jpg">
+            <source media="(max-width: 576px)" srcset="assets/images/mobile/image-from-above.jpg">
+            <img src="assets/images/desktop/image-from-above.jpg" alt="deep-earth">
+          </picture>
+          <p>From Up <br> Above vr</p>
+        </div>
 
-  The leader in interactive VR
+        <section class="product-card">
+          <picture>
+            <source media="(min-width: 577px)" srcset="assets/images/desktop/image-pocket-borealis.jpg">
+            <source media="(max-width: 576px)" srcset="assets/images/mobile/image-pocket-borealis.jpg">
+            <img src="assets/images/desktop/image-pocket-borealis.jpg" alt="deep-earth">
+          </picture>
+          <p>Pocket <br> borealis</p>
+        </section>
+        <section class="product-card">
+          <picture>
+            <source media="(min-width: 576px)" srcset="assets/images/desktop/image-curiosity.jpg">
+            <source media="(max-width: 575px)" srcset="assets/images/mobile/image-curiosity.jpg">
+            <img src="assets/images/desktop/image-curiosity.jpg" alt="deep-earth">
+          </picture>
+          <p>The <br> curiosity</p>
+        </section>
+        <section class="product-card">
+          <picture>
+            <source media="(min-width: 576px)" srcset="assets/images/desktop/image-fisheye.jpg">
+            <source media="(max-width: 575px)" srcset="assets/images/mobile/image-fisheye.jpg">
+            <img src="assets/images/desktop/image-fisheye.jpg" alt="deep-earth">
+          </picture>
+          <p>make it <br> fisheye</p>
+        </section>
+      </section>
+      <div class="btn">
+      <a href="#" class="btn-see-all">SEE ALL</a>
+      </div>
+    </section>
+  </main>
 
-  Founded in 2011, Loopstudios has been producing world-class virtual reality 
-  projects for some of the best companies around the globe. Our award-winning 
-  creations have transformed businesses through digital experiences that bind 
-  to their brand.
-
-  Our creations
-
-  See all
-
-  Deep earth
-  Night arcade
-  Soccer team VR
-  The grid
-  From up above VR
-  Pocket borealis
-  The curiosity
-  Make it fisheye
-
-  About
-  Careers
-  Events
-  Products
-  Support
-
-  © 2021 Loopstudios. All rights reserved.
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <footer>
+    <section class="footer-section">
+      <figure class="footer-logo">
+        <img src="assets/images/logo.svg" alt="">
+      </figure>
+      <nav class="footer-nav">
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#"> Careers</a></li>
+          <li><a href="#">Events</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">Support</a></li>
+        </ul>
+      </nav>
+    </section>
+    <section class="footer-right">
+      <div class="social-icon">
+        <a href="#"><img src="assets/images/icon-facebook.svg" alt=""></icon-icon></a>
+        <a href="#"><img src="assets/images/icon-twitter.svg" alt=""></a>
+        <a href="#"><img src="assets/images/icon-pinterest.svg" alt=""></a>
+        <a href="#"><img src="assets/images/icon-instagram.svg" alt=""></a>
+      </div>
+      <p class="reserved">© 2021 Loopstudios. All rights reserved.</p>
+    </section>
+    <div class="attribution">
+     <p> Challenge by: </p> <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor.</a>
+     <p> Coded by: </p><a href="https://github.com/Dcuastumal" target="_blank">David Alejandro Cuastumal Bucheli.</a>
+    </div>
+  </footer> 
+  <script src="assets/js/index.js"></script>
 </body>
 </html>
