fixed some page styles

--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
   <header>
     <nav class="menu">
       <div class="menu-logo logo">
-        <img src="assets/images/logo.svg" alt="" class="logo">
+        <img src="assets/images/logo.svg" alt="logo" class="logo">
       </div>
       <div class="navbar">
         <div class="query-navbar">
           <a href="#">
-            <img src="assets/images/logo.svg" alt="">
+            <img src="assets/images/logo.svg" alt="logo">
           </a>
           <div class="close-icon" id="btn-close" >
             <img src="assets/images/icon-close.svg" alt="close botton">
           </div>
         </div>
         <ul class="nav-list">
-          <li><a href="#" class="nav-link">About</a></li>
-          <li><a href="#" class="nav-link">Careers</a></li>
-          <li><a href="#" class="nav-link">Events</a></li>
-          <li><a href="#" class="nav-link">Products</a></li>
-          <li><a href="#" class="nav-link">Support</a></li>
+          <li><a href="/index.html" class="nav-link">About</a></li>
+          <li><a href="/index.html" class="nav-link">Careers</a></li>
+          <li><a href="/index.html" class="nav-link">Events</a></li>
+          <li><a href="/index.html" class="nav-link">Products</a></li>
+          <li><a href="/index.html" class="nav-link">Support</a></li>
         </ul>    
       </div>
     </nav>
@@ -55,7 +55,7 @@
   <main>
     <section class="vr-container">
       <div class="picture-container-vr">
-        <img src="assets/images/desktop/image-interactive.jpg" alt="">
+        <img src="assets/images/desktop/image-interactive.jpg" alt="virtual reality image">
       </div>
       <div class="container-text">
         <h2>The leader in interactive VR</h2>
@@ -90,7 +90,7 @@
           <picture>
             <source media="(min-width: 576px)" srcset="assets/images/desktop/image-soccer-team.jpg">
             <source media="(max-width: 575px)" srcset="assets/images/mobile/image-soccer-team.jpg">
-            <img src="assets/images/desktop/image-soccer-team.jpg" alt="deep-earth">
+            <img src="assets/images/desktop/image-soccer-team.jpg" alt="Soccer-team">
           </picture>
           <p>Soccer <br> Team vr</p>
         </div>
@@ -98,7 +98,7 @@
           <picture>
             <source media="(min-width: 576px)" srcset="assets/images/desktop/image-grid.jpg">
             <source media="(max-width: 575px)" srcset="assets/images/mobile/image-grid.jpg">
-            <img src="assets/images/desktop/image-grid.jpg" alt="deep-earth">
+            <img src="assets/images/desktop/image-grid.jpg" alt="the-grid">
           </picture>
           <p>The <br> Grid</p>
         </div>
@@ -106,7 +106,7 @@
           <picture>
             <source media="(min-width: 577px)" srcset="assets/images/desktop/image-from-above.jpg">
             <source media="(max-width: 576px)" srcset="assets/images/mobile/image-from-above.jpg">
-            <img src="assets/images/desktop/image-from-above.jpg" alt="deep-earth">
+            <img src="assets/images/desktop/image-from-above.jpg" alt="from-above">
           </picture>
           <p>From Up <br> Above vr</p>
         </div>
@@ -115,7 +115,7 @@
           <picture>
             <source media="(min-width: 577px)" srcset="assets/images/desktop/image-pocket-borealis.jpg">
             <source media="(max-width: 576px)" srcset="assets/images/mobile/image-pocket-borealis.jpg">
-            <img src="assets/images/desktop/image-pocket-borealis.jpg" alt="deep-earth">
+            <img src="assets/images/desktop/image-pocket-borealis.jpg" alt="pocket-borealis">
           </picture>
           <p>Pocket <br> borealis</p>
         </section>
@@ -123,7 +123,7 @@
           <picture>
             <source media="(min-width: 576px)" srcset="assets/images/desktop/image-curiosity.jpg">
             <source media="(max-width: 575px)" srcset="assets/images/mobile/image-curiosity.jpg">
-            <img src="assets/images/desktop/image-curiosity.jpg" alt="deep-earth">
+            <img src="assets/images/desktop/image-curiosity.jpg" alt="curiosity">
           </picture>
           <p>The <br> curiosity</p>
         </section>
@@ -131,7 +131,7 @@
           <picture>
             <source media="(min-width: 576px)" srcset="assets/images/desktop/image-fisheye.jpg">
             <source media="(max-width: 575px)" srcset="assets/images/mobile/image-fisheye.jpg">
-            <img src="assets/images/desktop/image-fisheye.jpg" alt="deep-earth">
+            <img src="assets/images/desktop/image-fisheye.jpg" alt="fisheye">
           </picture>
           <p>make it <br> fisheye</p>
         </section>
@@ -145,7 +145,7 @@
   <footer>
     <section class="footer-section">
       <figure class="footer-logo">
-        <img src="assets/images/logo.svg" alt="">
+        <img src="assets/images/logo.svg" alt="logo">
       </figure>
       <nav class="footer-nav">
         <ul>
@@ -159,10 +159,10 @@
     </section>
     <section class="footer-right">
       <div class="social-icon">
-        <a href="#"><img src="assets/images/icon-facebook.svg" alt=""></icon-icon></a>
-        <a href="#"><img src="assets/images/icon-twitter.svg" alt=""></a>
-        <a href="#"><img src="assets/images/icon-pinterest.svg" alt=""></a>
-        <a href="#"><img src="assets/images/icon-instagram.svg" alt=""></a>
+        <a href="#"><img src="assets/images/icon-facebook.svg" alt="icon-facebook"></a>
+        <a href="#"><img src="assets/images/icon-twitter.svg" alt="icon-twitter"></a>
+        <a href="#"><img src="assets/images/icon-pinterest.svg" alt="icon-pinterest"></a>
+        <a href="#"><img src="assets/images/icon-instagram.svg" alt="icon-instagram"></a>
       </div>
       <p class="reserved">© 2021 Loopstudios. All rights reserved.</p>
     </section>
