end of challenge

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
           </div>
         </div>
         <ul class="nav-list">
-          <li><a href="/index.html" class="nav-link">About</a></li>
-          <li><a href="/index.html" class="nav-link">Careers</a></li>
-          <li><a href="/index.html" class="nav-link">Events</a></li>
-          <li><a href="/index.html" class="nav-link">Products</a></li>
-          <li><a href="/index.html" class="nav-link">Support</a></li>
+          <li><a href="#about" class="nav-link">About</a></li>
+          <li><a href="#Our-inf" class="nav-link">Careers</a></li>
+          <li><a href="#products" class="nav-link">Events</a></li>
+          <li><a href="#products" class="nav-link">Products</a></li>
+          <li><a href="#footer" class="nav-link">Support</a></li>
         </ul>    
       </div>
     </nav>
@@ -52,9 +52,9 @@
     </section>
   </header>
   
-  <main>
-    <section class="vr-container">
-      <div class="picture-container-vr">
+  <main >
+    <section class="vr-container" id="about">
+      <div class="picture-container-vr" >
         <img src="assets/images/desktop/image-interactive.jpg" alt="virtual reality image">
       </div>
       <div class="container-text">
@@ -94,7 +94,7 @@
           </picture>
           <p>Soccer <br> Team vr</p>
         </div>
-        <div class="product-card">
+        <div class="product-card" id="products"> 
           <picture>
             <source media="(min-width: 576px)" srcset="assets/images/desktop/image-grid.jpg">
             <source media="(max-width: 575px)" srcset="assets/images/mobile/image-grid.jpg">
@@ -137,20 +137,20 @@
         </section>
       </section>
       <div class="btn">
-      <a href="#" class="btn-see-all">SEE ALL</a>
+      <a href="#products" class="btn-see-all">SEE ALL</a>
       </div>
     </section>
   </main>
 
   <footer>
-    <section class="footer-section">
+    <section class="footer-section" id="footer">
       <figure class="footer-logo">
         <img src="assets/images/logo.svg" alt="logo">
       </figure>
       <nav class="footer-nav">
         <ul>
           <li><a href="#">About</a></li>
-          <li><a href="#"> Careers</a></li>
+          <li><a href="#">Careers</a></li>
           <li><a href="#">Events</a></li>
           <li><a href="#">Products</a></li>
           <li><a href="#">Support</a></li>
